src/objects/Incident__c.object
<CustomObject>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the individual responsible for ticket resolution.</description>
        <inlineHelpText>Identifies the individual responsible for ticket resolution.</inlineHelpText>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigned_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <description>Describes the action being taken on the ticket.</description>
        <inlineHelpText>Describes the action being taken on the ticket.</inlineHelpText>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the person for whom the ticket is being submitted.</description>
        <inlineHelpText>Identifies the person for whom the ticket is being submitted.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description_History__c</fullName>
        <description>Displays a running history of Descriptions added to this ticket.</description>
        <inlineHelpText>Displays a running history of Descriptions added to this ticket.</inlineHelpText>
        <label>Description History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Detailed description of the ticket.</description>
        <inlineHelpText>Detailed description of the ticket.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>How many users are affected by the ticket.</description>
        <inlineHelpText>How many users are affected by the ticket.</inlineHelpText>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Impact</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Notes_History__c</fullName>
        <description>Displays a running history of Internal Notes added to this ticket.</description>
        <inlineHelpText>Displays a running history of Internal Notes added to this ticket.</inlineHelpText>
        <label>Internal Notes History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Notes__c</fullName>
        <description>Stores notes and comments intended for the teams fulfilling the ticket.</description>
        <inlineHelpText>Stores notes and comments intended for the teams fulfilling the ticket.</inlineHelpText>
        <label>Internal Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>Describes the final actions taken to fulfill the ticket.</description>
        <inlineHelpText>Describes the final actions taken to fulfill the ticket.</inlineHelpText>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Time_Stamp_12H_Text__c</fullName>
        <formula>IF ( DATEVALUE(NOW()) &gt;= /*Check for DST*/
DATE ( YEAR (DATEVALUE(NOW())),3,1)
+
(
14-
CASE( MOD(DATE ( YEAR (DATEVALUE(NOW())),3,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(NOW())),3,1) - DATE (1900,1,7),7))
)
&amp;&amp;
DATEVALUE(NOW()) &lt;
DATE ( YEAR (DATEVALUE(NOW())),11,1)
+
(
7-
CASE( MOD(DATE ( YEAR (DATEVALUE(NOW())),11,1) - DATE (1900,1,7),7) ,
0,7,MOD(DATE ( YEAR (DATEVALUE(NOW())),11,1) - DATE (1900,1,7),7))
),

Text(CASE(VALUE(MID(TEXT( NOW()- 4/24 ), 12, 2)), /*Convert to 12 Hour Eastern Daylight Time (EDT)*/
0, 12, 
1, 1, 
2, 2, 
3, 3, 
4, 4, 
5, 5, 
6, 6, 
7, 7, 
8, 8, 
9, 9, 
10, 10, 
11, 11, 
12, 12, 
13, 1,
14, 2, 
15, 3, 
16, 4, 
17, 5, 
18, 6, 
19, 7, 
20, 8, 
21, 9, 
22, 10, 
23, 11, 
24)) 
&amp; &quot;:&quot; &amp; MID(TEXT( NOW()- 4/24 ) , 15, 2) 
&amp; IF(AND(VALUE(MID(TEXT( NOW()- 4/24 ) , 12, 2)) &gt;= 0, VALUE(MID(TEXT( NOW()- 4/24 ) , 12, 2)) &lt;= 11), &quot; AM EDT&quot;, &quot; PM EDT&quot;), /*Eastern Daylight Time (EDT)*/

Text(CASE(VALUE(MID(TEXT( NOW()- 5/24 ), 12, 2)), /*Convert to 12 Hour Time Eastern Standard Time (EST)*/
0, 12, 
1, 1, 
2, 2, 
3, 3, 
4, 4, 
5, 5, 
6, 6, 
7, 7, 
8, 8, 
9, 9, 
10, 10, 
11, 11, 
12, 12, 
13, 1,
14, 2, 
15, 3, 
16, 4, 
17, 5, 
18, 6, 
19, 7, 
20, 8, 
21, 9, 
22, 10, 
23, 11, 
24)) 
&amp; &quot;:&quot; &amp; MID(TEXT( NOW()- 5/24 ) , 15, 2) 
&amp; IF(AND(VALUE(MID(TEXT( NOW()- 5/24 ) , 12, 2)) &gt;= 0, VALUE(MID(TEXT( NOW()- 5/24 ) , 12, 2)) &lt;= 11), &quot; AM EST&quot;, &quot; PM EST&quot;)) /*Eastern Standard Time (EST)*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Stamp 12H Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Brief summary of the ticket.</description>
        <inlineHelpText>Brief summary of the ticket.</inlineHelpText>
        <label>Title</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <description>The level of disruption to the service for the ticket.</description>
        <inlineHelpText>The level of disruption to the service for the ticket.</inlineHelpText>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Urgency</valueSetName>
        </valueSet>
    </fields>
    <label>Incident</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Service_Desk_Ticket</fullName>
        <filterScope>Queue</filterScope>
        <label>Service Desk</label>
        <queue>Service_Desk</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IN{000000}</displayFormat>
        <label>Incident #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <recordTypes>
        <fullName>Incident</fullName>
        <active>true</active>
        <description>Incidents are defined as a degradation or outage in service.</description>
        <label>Incident</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Request</fullName>
        <active>true</active>
        <description>A Service Request is a change, addition, or removal of a service offering.</description>
        <label>Service Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>